--- a/afripro-dashboard/package.json
+++ b/afripro-dashboard/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
+    "react-images": "^1.2.0-beta.7",
     "react-phone-input-2": "^2.14.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
