--- a/chat_server/package.json
+++ b/chat_server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "socket.io": "^4.3.1"
   },
   "devDependencies": {
