--- a/afripro-dashboard/package.json
+++ b/afripro-dashboard/package.json
@@ -2,7 +2,7 @@
   "name": "afripro-dashboard",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://app.venturehallconsult.com/",
+  "homepage": "https://cms.afri.pro/",
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
